docs: bring the handoff up to date after the build-hygiene merge
Records the merge as 83e6880, adds a section 0 subsection on what CI does
and does not do, and removes every pointer to the deleted SDD ledger.